# Capstone_Torque

./: .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  README.md  bandit.yaml  powerbi_fleet_dashboard_spec.md  pyproject.toml  pytest.ini  requirements.txt  run.py  wsgi.py
.github/workflows/: update-license-year.yml
app/: __init__.py  extensions.py
app/middleware/: tenant.py
app/models/: __init__.py  base.py  chef.py  customer.py  inventory.py  job.py  part.py  service.py  subscription.py  tenant.py  tenant_membership.py  user.py
app/services/: __init__.py  auth_service.py  billing_service.py  customer_service.py  job_service.py  stripe_service.py  tenant_service.py
app/static/css/: custom.css
app/static/js/: main.js  neon-auth.js
app/templates/: about.html  help.html  index.html
app/templates/administrator/: billing.html  customer_list.html  dashboard.html  inventory.html  org_settings.html  overdue_bills.html  parts_catalog.html  pay_bills.html  reports.html  service_catalog.html  subscription.html  team_members.html
app/templates/auth/: invitations.html  login.html  no_organization.html  oauth_completing.html  register_organization.html  select_tenant.html  verify_email.html
app/templates/base/: layout.html  layout_with_sidebar.html
app/templates/billing/: plans.html  success.html
app/templates/chef/: confirmation.html  detail.html  directory.html  studio.html
app/templates/components/: admin_sidebar.html  flash_messages.html  loading_spinner.html  pagination.html  toast_notifications.html
app/templates/customers/: detail.html  form.html  list.html
app/templates/errors/: 403.html  404.html  500.html
app/templates/onboarding/: complete.html  step_parts.html  step_services.html  step_team.html
app/templates/technician/: current_jobs.html  new_job.html  (+5 more)
app/utils/: __init__.py  database.py  decorators.py  error_handler.py  security.py  validators.py
app/views/: __init__.py  administrator.py  auth.py  billing.py  main.py  onboarding.py  technician.py
config/: __init__.py  base.py
docs/: neon-better-auth-flask-integration-guide.md
docs/deployment/: heroku.md  neon.md  quick_start.md
migrations/: env.py
migrations/versions/: 001_create_multitenant_tables.py  002_backfill_default_tenant.py  003_enforce_tenant_constraints.py  004_neon_auth_migration.py  005_add_chef_marketplace_tables.py
powerbi_fleet_pack/: README.md  build_checklist.md  dax_measures.md  report_pages.md
powerbi_fleet_pack/data/: dim_company.csv  dim_driver.csv  dim_service_type.csv  dim_vehicle.csv  fact_service_events.csv  fact_speeding_events.csv  fact_vehicle_daily_usage.csv
public/: README.md  index.html  script.js  style.css  torque-garage-prototype.html
scripts/: cleanup_duplicate_tenant.py
tests/: README.md  __init__.py  conftest.py  utils.py
tests/integration/: test_views.py
tests/unit/: test_auth.py  test_basic.py  test_models.py  test_multitenant.py  test_security.py
